<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.kristen.piletdemo.MainActivity">

    <RelativeLayout
            android:id="@+id/relLAy"
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

        <Button
                style="@style/buttonStyle"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/btnScan"
                android:id="@+id/btnScan"
                android:layout_alignParentBottom="true" android:layout_centerHorizontal="true"/>
    </RelativeLayout>

    <RelativeLayout
            android:id="@+id/drawer"
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            tools:context="com.example.kristen.piletdemo.Settings">

        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:id="@+id/settingsTitle" android:layout_alignParentTop="true" android:layout_centerHorizontal="true"
                android:textSize="30sp" android:gravity="center" android:textColor="#5b5c5c"/>
        <Button
                style="@style/buttonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deleteEntries"
                android:id="@+id/deleteEntries" android:layout_centerVertical="true" android:layout_centerHorizontal="true"
                android:paddingLeft="10dp" android:paddingRight="10dp"/>
        <Button
                style="@style/buttonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/estLang"
                android:id="@+id/estLangBtn"
                android:layout_below="@+id/engLangBtn" android:layout_centerHorizontal="true" android:layout_marginTop="10dp"/>
        <Button
                style="@style/buttonStyle"
                android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/engLang"
                android:id="@+id/engLangBtn"
                android:layout_below="@+id/deleteEntries" android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp" android:layout_marginBottom="10dp"/>
        <Button style="@style/buttonStyle" android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="@string/btnScanKey" android:id="@+id/settingsScan"
                android:paddingLeft="10dp" android:paddingRight="10dp" android:layout_below="@+id/estLangBtn"
                android:layout_centerHorizontal="true" android:layout_marginTop="32dp"/>
    </RelativeLayout>

</android.support.v4.widget.DrawerLayout>