<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        style="@style/InvalidTheme"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.example.kristen.piletdemo.Invdalid"
>
    <Button
            style="@style/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/btnReset"
            android:id="@+id/btnResetInValid"
            android:layout_marginStart="58dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"/>
    <Button
            style="@style/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/btnScan"
            android:id="@+id/btnScanInValid"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="58dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/invalid"
            android:id="@+id/textView6"
            android:textSize="30sp" android:layout_centerVertical="true" android:layout_centerHorizontal="true"/>
</RelativeLayout>
