<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        android:id="@+id/relLAy"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.example.kristen.piletdemo.ScanActivity">

    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="40dp"
                  android:background="#ffffff" android:layout_alignParentStart="true" android:id="@+id/linLayout">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:textAppearance="?android:attr/textAppearanceMedium" android:text="@string/tickettype"
                  android:id="@+id/textView" android:background="#ffffff" android:textSize="25sp"
                  android:layout_gravity="center_vertical" android:layout_marginLeft="20dp"/>
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
                  android:textAppearance="?android:attr/textAppearanceMedium" android:text="@string/quantity"
                  android:id="@+id/textView2" android:background="#ffffff" android:textSize="25sp"
                  android:layout_gravity="center_vertical|right" android:textAlignment="textEnd"
                  android:layout_marginRight="20dp"/>
    </LinearLayout>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:id="@+id/scrollView"
            android:layout_alignParentEnd="true" android:layout_marginBottom="130dp"
            android:layout_marginTop="70dp">
        <TableLayout
                android:id="@+id/tabelLay"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
        </TableLayout>
    </ScrollView>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="40dp"
                  android:background="#ffffff"
                  android:layout_alignParentBottom="true" android:layout_alignParentStart="true"
                  android:layout_marginBottom="60dp" android:id="@+id/totalLayout">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:textAppearance="?android:attr/textAppearanceMedium" android:text="@string/total"
                  android:id="@+id/textView3" android:background="#ffffff" android:textSize="25sp"
                  android:layout_gravity="center_vertical" android:layout_marginLeft="20dp"/>
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
                  android:textAppearance="?android:attr/textAppearanceMedium"
                  android:id="@+id/totalAmount" android:background="#ffffff" android:textSize="25sp"
                  android:layout_gravity="center_vertical|right" android:textAlignment="textEnd"
                  android:layout_marginRight="20dp"/>
    </LinearLayout>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="scan"
            android:id="@+id/btnScan"
            android:layout_alignParentBottom="true" android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"/>
</RelativeLayout>

